--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,10 @@ spring.datasource.password=123456
 spring.datasource.type =com.alibaba.druid.pool.DruidDataSource
 
 #开启控制台打印sql
-mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+mybatis-plus.global-config.banner=false
+
+
 
 # mybatis 下划线转驼峰配置,两者都可以
 #mybatis.configuration.mapUnderscoreToCamelCase=true
@@ -24,3 +27,7 @@ mybatis.type-aliases-package=com.itheima.domain
 spring.mvc.static-path-pattern=/static/**
 
 spring.mvc.servlet.load-on-startup=2
+
+mybatis-plus.global-config.db-config.logic-delete-field=isDeleted
+mybatis-plus.global-config.db-config.logic-delete-value=1
+mybatis-plus.global-config.db-config.logic-not-delete-value=0
